# hyperion-framework-examples

./: Cargo.toml  README.md
common_messages/: Cargo.toml
common_messages/src/: lib.rs
common_messages/src/messages/: another_example_message.rs  container_message.rs  example_message.rs  mod.rs
component_a/: Cargo.toml
component_a/config/: configuration.xml  network_topology.xml
component_a/src/: component.rs  main.rs
component_a/src/component_logic/: internal_logic.rs  mod.rs
component_b/: Cargo.toml
component_b/config/: configuration.xml  network_topology.xml
component_b/src/: component.rs  config.rs  main.rs
component_b/src/component_logic/: internal_logic.rs
